# project-Beta

./: .gitignore  AGENTS.md  ANTIGRAVITY_ROLE.md  API_SCHEMA.md  ARCHITECTURE.md  GUARDRAILS.md  IMPLEMENTATION_PLAN.md  LOGIC.md  MODEL_USAGE.md  PHASE_PLAN.md  README.md  SPEC.md  STATUS.md  SYSTEM_ARCHITECTURE.md  TECH_STACK.md  lancedb_seed.json  schema.sql
db/: tracker.sqlite
docs/: MULTI_AGENT_SYSTEM.md  RAG_REINTEGRATION.md
sidecar/: build.bat  main.py  nuitka-crash-report.xml  requirements.txt  verify_data_layer.py  verify_phase_5.py
sidecar/agents/: code_gen_mapper.py  column_mapper.py  forecast_agent.py  multi_agent_mapper.py  schedule_engine.py  status_classifier.py
sidecar/db/: manager.py  tracker.sqlite  vector_store.py
sidecar/lancedb/ui_fields.lance/_transactions/: 0-7996eb3f-89cf-4fb2-900f-9e1505aed502.txn
sidecar/logic/: auth.py  excel_engine.py  lifecycle.py  mapping_manager.py
sidecar/models/: api_models.py
sidecar/routers/: asset_router.py  auth_router.py  forecast_router.py  import_router.py  maintenance_router.py  overhaul_router.py  stats_router.py
sidecar/scratch/: fix_db_schema.py  fix_db_schema_v2.py  inspect_db.py  test_model_load.py  test_query.py  test_root_db.py
sidecar/scripts/: provision_assets.py  setup_models.py
sidecar/tests/: test_logic.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: main.rs  sidecar.rs
